src/test/ui/rustc-error.stderr
error: compilation successful
  --> $DIR/rustc-error.rs:4:1
   |
LL | / fn main() {
LL | |
LL | | }
   | |_^

error: aborting due to previous error

