src/test/ui/rustc-error.rs
#![feature(rustc_attrs)]

#[rustc_error]
fn main() {
    //~^ ERROR compilation successful
}
